--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       href="./assets/favicon.svg"
       type="image/svg+xml"
     />
+    <link rel="stylesheet" href="./dist/styles.css" />
     <title>Newsletter sign-up form with success message</title>
   </head>
-  <body></body>
+  <body>
+    <script src="./app/js/script.js"></script>
+  </body>
 </html>
